kubernetes/apps/kube-system/portainer/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "true"
    hajimari.io/appName: "portainer"
    hajimari.io/icon: "pier-crane"
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: portainer.${SECRET_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authelia@kubernetescrd
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "portainer.${SECRET_DOMAIN}"
      secretName: "portainer-tls"
  rules:
    - host: "portainer.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 9000
